Implement read/write of throttle usage snapshots using state
Signed-off-by: Miroslav Gatsanoga <miroslav.gatsanoga@limechain.tech>